# parler-account-generator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cities.json  docker-compose.yml
src/: email.rs  generate.rs  info.rs  main.rs
