[package]
name = "parler-account-generator"
version = "0.3.0"
edition = "2021"
authors = ["Jonah", "Overlisted"]
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.65"
reqwest = { version = "0.11.12", features = ["json", "multipart", "stream", "socks"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
fake = { version = "2.5", features = ["derive"] }
rand = "0.8.5"
futures = "0"
async-native-tls = { version = "0", default-features = false }
async-imap = "0.6.0"
async-std = "1.12.0"
dashmap = "5"
regex = "1"
lazy_static = "1"
mongodb = "2.3.1"
tokio-util = { version = "0.7.4", features = ["codec"] }
base64 = "0.13.1"
glob = "0"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0", features = ["serde"] }
serde_with = { version = "2", features = ["chrono"] }
dotenv = "0.15.0"
